--- a/fixme.dtx
+++ b/fixme.dtx
@@ -3651,30 +3651,30 @@
 % \end{macro}
 % \end{layout}
 %
-% \subsubsection{The \texttt{pdfmarginnote} layout}
-% \begin{layout}{pdfmarginnote}
+% \subsubsection{The \texttt{pdfmargin} layout}
+% \begin{layout}{pdfmargin}
 %   \mbox{}
 %    \begin{macrocode}
-%<*fxlayoutpdfmarginnote>
+%<*fxlayoutpdfmargin>
 \NeedsTeXFormat{LaTeX2e}
-\FXProvidesLayout{pdfmarginnote}
+\FXProvidesLayout{pdfmargin}
 
 \RequirePackage{pdfcomment}
 
 %    \end{macrocode}
-% \begin{macro}{\FXLayoutPDFMarginNote}
+% \begin{macro}{\FXLayoutPDFMargin}
 %   \marg{type}\marg{note}\marg{author}
 %    \begin{macrocode}
-\newcommand*\FXLayoutPDFMarginNote[3]{%
+\newcommand*\FXLayoutPDFMargin[3]{%
   \pdfmargincomment[author=#3]{\ignorespaces#3 \fxnotename{#1}: #2}}
 %    \end{macrocode}
 % \end{macro}
-% \begin{macro}{\@fxlayout@pdfmarginnote}
-%   \begin{booleanoption}{pdfmarginnote}
+% \begin{macro}{\@fxlayout@pdfmargin}
+%   \begin{booleanoption}{pdfmargin}
 %    \begin{macrocode}
-\FXRegisterLayout*[margin,marginclue,marginnote]{pdfmarginnote}{%
-  \FXLayoutPDFMarginNote}
-%</fxlayoutpdfmarginnote>
+\FXRegisterLayout*[margin,marginclue,marginnote]{pdfmargin}{%
+  \FXLayoutPDFMargin}
+%</fxlayoutpdfmargin>
 %    \end{macrocode}
 % \end{booleanoption}
 % \end{macro}
