Document the pdfsig* layouts

--- a/NEWS
+++ b/NEWS
@@ -20,6 +20,7 @@ FiXme consists of the files listed in the file `README'.
 
 * Version 4.1
 =============
+** 4 new PDF-specific annotation layouts
 ** New annotation layout: marginnote
 ** Better mechanism for handling layout mutual exclusion
 ** Fix bug in inner layout processing
