--- a/TODO
+++ b/TODO
@@ -41,3 +41,10 @@ nice to have local lists of fixmes and stuff...
 * There are still some "Floats Lost" problems despite the inner mode handling.
 This happens notably with the warning level, apparently because "warning" is
 longer than the other prefixes.
+
+* Provide theme/layouts or explanations for people wanting to use different
+colors for authors instead of note levels.
+
+* Instead of multiplying the layouts, it would nicer to be able to give them
+options (either at the package level for external ones, or at the macro level
+for all of them).
