Fix early/late status of some pdf layouts

--- a/fixme.dtx
+++ b/fixme.dtx
@@ -3670,7 +3670,7 @@
 % \begin{macro}{\@fxlayout@pdfnote}
 %   \begin{booleanoption}{pdfnote}
 %    \begin{macrocode}
-\FXRegisterLayout*{pdfnote}{\FXLayoutPDFNote}
+\FXRegisterLayout{pdfnote}{\FXLayoutPDFNote}
 %</fxlayoutpdfnote>
 %    \end{macrocode}
 % \end{booleanoption}
@@ -3740,7 +3740,7 @@
 % \begin{macro}{\@fxlayout@pdfsignote}
 %   \begin{booleanoption}{pdfsignote}
 %    \begin{macrocode}
-\FXRegisterLayout*[pdfnote]{pdfsignote}{\FXLayoutPDFSigNote}
+\FXRegisterLayout[pdfnote]{pdfsignote}{\FXLayoutPDFSigNote}
 %</fxlayoutpdfsignote>
 %    \end{macrocode}
 % \end{booleanoption}
