--- a/THANKS
+++ b/THANKS
@@ -22,11 +22,11 @@ FiXme consists of the files listed in the file `README'.
 ** The following persons have contributed code, bug reports, localization,
 ** suggestions etc:
 
-Michael Kubovy, Mark Edgington, Rasmus Villemoes, Philipp Stephani, Will
-Robertson, Jochen Wuttke, Jens Remus, Brian van den Broek, Lars Madsen, Stefan
-Mann, Marcel Maretic, Claude Lacoursière, Arnold Beckmann, Akim Demaille, Kim
-Rud Bille, Knut Lickert, Kasper B. Graversen, Augustín Martín, Ulf
-Jaenicke-Roessler, Riccardo Murri, Harald Harders.
+Sébastien Mengin, Michael Kubovy, Mark Edgington, Rasmus Villemoes, Philipp
+Stephani, Will Robertson, Jochen Wuttke, Jens Remus, Brian van den Broek, Lars
+Madsen, Stefan Mann, Marcel Maretic, Claude Lacoursière, Arnold Beckmann, Akim
+Demaille, Kim Rud Bille, Knut Lickert, Kasper B. Graversen, Augustín Martín,
+Ulf Jaenicke-Roessler, Riccardo Murri, Harald Harders.
 
 
 
