--- a/fixme.dtx
+++ b/fixme.dtx
@@ -70,7 +70,7 @@
 % \fi
 %
 % \catcode`\¡=14
-% ^^A\CheckSum{1613}
+% \CheckSum{1833}
 % \GetFileInfo{fixme.inc}
 %% \CharacterTable
 %%  {Upper-case    \A\B\C\D\E\F\G\H\I\J\K\L\M\N\O\P\Q\R\S\T\U\V\W\X\Y\Z
@@ -1488,8 +1488,9 @@
 %
 % \section{History\label{sec:manual:history}}
 % \begin{itemize}
-% \item[v4.1] 8 new PDF-specific annotation layouts\\
-%   New annotation layout: \texttt{marginnote}.\\
+% \item[v4.1] 8 new PDF-specific annotation layouts.\\
+%   New annotation layout: \texttt{marginnote}, suggested by Sébastien
+%   Mengin.\\
 %   Better mechanism for handling layout mutual exclusion.\\
 %   Fix bug in inner layout processing.
 % \item[v4.0] Support for collaborative annotations, suggested by Michael
