--- a/NEWS
+++ b/NEWS
@@ -19,15 +19,13 @@ FiXme consists of the files listed in the file `README'.
 
 
 * Version 4.1
-=============
 ** 8 new PDF-specific annotation layouts.
 ** New annotation layout: marginnote
-suggested by Sébastien Mengin.
+suggested by SÃ©bastien Mengin.
 ** Better mechanism for handling layout mutual exclusion.
 ** Fix bug in inner layout processing.
 
 * Version 4.0
-=============
 ** Support for collaborative annotations
 suggested by Michael Kubovy.
 ** Support for "targeted" notes and environments
@@ -45,14 +43,12 @@ suggested by Will Robertson.
 ** Heavy internals refactoring.
 
 * Version 3.4
-=============
 ** \fixme, \fxerror, \fxwarning and \fxnote are now robust
 thanks to Will Robertson.
 ** Fix incompatibility with KOMA-Script classes
 when the lox file is inexistent, reported by Philipp Stephani.
 
 * Version 3.3
-=============
 ** Document incompatibility between marginal layout and the ACM SIG classes
 reported by Jochen Wuttke.
 ** Honor twoside option in marginal layout
@@ -67,23 +63,20 @@ reported by Lars Madsen: \@starttoc takes 2 arguments.
 reported by Stefan Mann: a typo in the macro name.
 
 * Version 3.2
-=============
 ** Added the marginclue layout option
 which only signals a fixme in the margin, withtout the actual contents.
 ** Support for Croatian
-thanks to Marcel Maretic <marcel@fsb.hr>.
+thanks to Marcel Maretic.
 ** Fix incompatibility with AMS-Book
-reported by Claude Lacoursière: \@starttoc takes 2 arguments.
+reported by Claude LacoursiÃ¨re: \@starttoc takes 2 arguments.
 ** Fix incompatibility with Beamer
 reported by Akim Demaille: protect contents of lox file in environments.
 
 * Version 3.1
-=============
 ** Fix bug in environments
 reported by Arnold Beckmann: they were visible in final mode.
 
 * Version 3.0
-=============
 ** Added fixme environments
 providing similar functionalities as already existing macros.
 ** Added an optional first argument to the note insertion commands
@@ -93,13 +86,11 @@ reported by Akim Demaille: they could mess up the document's layout by
 flushing it right.
 
 * Version 2.2
-=============
 ** New option "silent" to suppress notes logging.
 ** Support for Danish
-thanks to Kim Rud Bille <krbi01@control.auc.dk>.
+thanks to Kim Rud Bille.
 
 * Version 2.1
-=============
 ** Use \nobreakspace instead of the tilda character:
 this avoids conflicts with Babel and Spanish environments.
 ** Fix bug in index handling
@@ -107,34 +98,29 @@ reported by Knut Lickert: index entries were
 unconditionally built.
 
 * Version 2.0
-=============
 ** New feature: note levels.
 ** New feature: note counters, FiXme usage summary.
 ** Suggestions from Kasper B. Graversen.
 ** Support for Spanish
-thanks to Augustín Martín <agusmba@terra.es>.
+thanks to AugustÃ­n MartÃ­n.
 
 * Version 1.5
-=============
 ** New `inline' layout option:
 puts notes directly in the text.
 
 * Version 1.4
-=============
 ** Support for the koma-script classes.
 ** Fix bug in \listoffixmes
 reported by Ulf Jaenicke-Roessler: the command didn't work when called before
 the first fixme note.
 
 * Version 1.3
-=============
 ** Support for Italian
-thanks to Riccardo Murri <murri@phc.unipi.it>.
+thanks to Riccardo Murri.
 
 * Version 1.2
-=============
 ** Support for German
-thanks to Harald Harders <h.harders@tu-bs.de>.
+thanks to Harald Harders.
 
 
 
