--- a/THANKS
+++ b/THANKS
@@ -20,13 +20,14 @@ FiXme consists of the files listed in the file `README'.
 * Contributors
 
 ** The following persons have contributed code, bug reports, localization,
-** suggestions etc:
+** suggestions etc.:
 
-Sébastien Mengin, Michael Kubovy, Mark Edgington, Rasmus Villemoes, Philipp
-Stephani, Will Robertson, Jochen Wuttke, Jens Remus, Brian van den Broek, Lars
-Madsen, Stefan Mann, Marcel Maretic, Claude Lacoursière, Arnold Beckmann, Akim
-Demaille, Kim Rud Bille, Knut Lickert, Kasper B. Graversen, Augustín Martín,
-Ulf Jaenicke-Roessler, Riccardo Murri, Harald Harders.
+Norman Gray, SÃ©bastien Mengin, Michael Kubovy, Mark Edgington, Rasmus
+Villemoes, Philipp Stephani, Will Robertson, Jochen Wuttke, Jens Remus, Brian
+van den Broek, Lars Madsen, Stefan Mann, Marcel Maretic, Claude LacoursiÃ¨re,
+Arnold Beckmann, Akim Demaille, Kim Rud Bille, Knut Lickert, Kasper B.
+Graversen, AugustÃ­n MartÃ­n, Ulf Jaenicke-Roessler, Riccardo Murri, Harald
+Harders.
 
 
 
