Improve some file headers.

--- a/fixme.dtx
+++ b/fixme.dtx
@@ -1,14 +1,12 @@
 % \iffalse
 %
-% fixme.dtx --- Doc file for the FiXme package (code and documentation)
+% fixme.dtx --- docTeX file for FiXme
 %
 % Copyright (C) 1998, 1999, 2000, 2001, 2002, 2004, 2005, 2006 Didier Verna.
 % Copyright (C) 2007, 2009 Didier Verna.
 %
-% Author:        Didier Verna <didier@lrde.epita.fr>
-% Maintainer:    Didier Verna <didier@lrde.epita.fr>
-% Created:       Thu Dec 10 16:04:01 1998
-% Last Revision: Wed Sep 30 18:01:02 2009
+% Author: Didier Verna <didier@didierverna.net>
+% Created: Thu Dec 10 16:04:01 1998
 %
 % This file is part of FiXme.
 %
