Update my email address.

--- a/fixme.dtx
+++ b/fixme.dtx
@@ -139,7 +139,7 @@
 %     \fx homepage: %
 %     \texttt{http://www.lrde.epita.fr/\~{}didier/software/latex.php\#fixme}}}
 % \author{Didier Verna\\
-%   \texttt{mailto:didier@lrde.epita.fr}\\
+%   \texttt{mailto:didier@didierverna.net}\\
 %   \texttt{http://www.lrde.epita.fr/\~{}didier/}}
 % \maketitle
 %
