Update the HISTORY format.

--- a/fixme.dtx
+++ b/fixme.dtx
@@ -1487,7 +1487,7 @@
 % \section{History\label{sec:manual:history}}
 % \begin{itemize}
 % \item[v4.1] 8 new PDF-specific annotation layouts.\\
-%   New annotation layout: \texttt{marginnote}, suggested by Sébastien
+%   New annotation layout: \texttt{marginnote}, suggested by S\'ebastien
 %   Mengin.\\
 %   Better mechanism for handling layout mutual exclusion.\\
 %   Fix bug in inner layout processing.
@@ -1524,7 +1524,7 @@
 %   macro name.
 % \item[v3.2] Added the marginclue layout option which only signals a fixme in
 %   the margin, withtout the actual contents.\\
-%   Support for Croatian thanks to Marcel Maretic |<marcel@fsb.hr>|.\\
+%   Support for Croatian thanks to Marcel Maretic.\\
 %   Fix incompatibility with \texttt{amsbook} reported by Claude
 %   Lacoursi\`ere: \cs{@starttoc} takes two arguments.\\
 %   Fix incompatibility with Beamer reported by Akim Demaille: protect
@@ -1538,22 +1538,21 @@
 %   Fix bug reported by Akim Demaille: marginal notes could mess up the
 %   document's layout by flushing it right.
 % \item[v2.2] New option \texttt{silent} to suppress notes logging.\\
-%   Support for Danish thanks to Kim Rud Bille |<krbi01@control.auc.dk>|.
-% \item[v2.1] Use \cs{nobreakspace} instead of the tilda character. This avoids
-%   conflicts with Babel in Spanish environments.\\
-%   Fix bug reported by Knut Lickert: index entries were unconditionally built.
+%   Support for Danish thanks to Kim Rud Bille.
+% \item[v2.1] Use \cs{nobreakspace} instead of the tilda character. This
+%   avoids conflicts with Babel in Spanish environments.\\
+%   Fix bug reported by Knut Lickert: index entries were unconditionally
+%   built.
 % \item[v2.0] New feature: note levels.\\
 %   New feature: \fx note counters and usage summary.\\
-%   Suggestions from Kasper B. Graversen |<kbg@dkik.dk>|.\\
-%   Support for Spanish thanks to Agust\'in Mart\'in |<agusmba@terra.es>|
+%   Suggestions from Kasper B. Graversen.\\
+%   Support for Spanish thanks to Agust\'in Mart\'in.
 % \item[v1.5] New appearance option: \texttt{inline}.
 % \item[v1.4] Support for the \komascript classes.\\
 %   Fix bug reported by Ulf Jaenicke-Roessler: the \cs{listoffixmes} command
 %   didn't work when called before the first \fx note.
-% \item[v1.3] Support for Italian thanks to Riccardo Murri
-%   |<murri@phc.unipi.it>|.
-% \item[v1.2] Support for German thanks to Harald Harders
-%   |<h.harders@tu-bs.de>|.
+% \item[v1.3] Support for Italian thanks to Riccardo Murri.
+% \item[v1.2] Support for German thanks to Harald Harders.
 % \end{itemize}
 %
 % \StopEventually{\vfill\hfill\small \packagecopyright{}.}
