Danish localization update from Lars Madsen.

--- a/fixme.dtx
+++ b/fixme.dtx
@@ -3332,8 +3332,8 @@
 \newcommand\fxdanishwarningsname{Advarsler}
 \newcommand\fxdanisherrorname{Fejl}
 \newcommand\fxdanisherrorsname{Fejl}
-\newcommand\fxdanishfatalname{D\o delige}
-\newcommand\fxdanishfatalsname{Sk\ae bnesvangre fejl}
+\newcommand\fxdanishfatalname{Fatal}
+\newcommand\fxdanishfatalsname{Fatale fejl}
 \newcommand\danishlistfixmename{Rettelser}
 
 %    \end{macrocode}
