--- a/fixme.dtx
+++ b/fixme.dtx
@@ -68,7 +68,7 @@
 % \fi
 %
 % \catcode`\¡=14
-% \CheckSum{1833}
+% \CheckSum{1831}
 % \GetFileInfo{fixme.inc}
 %% \CharacterTable
 %%  {Upper-case    \A\B\C\D\E\F\G\H\I\J\K\L\M\N\O\P\Q\R\S\T\U\V\W\X\Y\Z
@@ -1486,6 +1486,9 @@
 %
 % \section{History\label{sec:manual:history}}
 % \begin{itemize}
+% \item[v4.2] Improve Danish translation, thanks to Lars Madsen.\\
+%   Fix buglet in \cs{@wrindex} redefinition, reported by Norman
+%   Gray.\\
 % \item[v4.1] 8 new PDF-specific annotation layouts.\\
 %   New annotation layout: \texttt{marginnote}, suggested by S\'ebastien
 %   Mengin.\\
