Update copyright years.

--- a/NEWS
+++ b/NEWS
@@ -1,9 +1,7 @@
-
 			     WHAT'S NEW IN FIXME
 
 
-Copyright (C) 1998, 1999, 2000, 2001, 2002, 2004, 2005, 2006 Didier Verna
-Copyright (C) 2007, 2009 Didier Verna
+Copyright (C) 1998-2002, 2004-2007, 2009, 2013 Didier Verna
 
 This file is part of FiXme.
 
