--- a/THANKS
+++ b/THANKS
@@ -1,8 +1,7 @@
-
 				 THANK YOU!
 
 
-Copyright (C) 2007, 2009 Didier Verna
+Copyright (C) 2007, 2009, 2013 Didier Verna
 
 This file is part of FiXme.
 
