--- a/fixme.dtx
+++ b/fixme.dtx
@@ -2,8 +2,7 @@
 %
 % fixme.dtx --- docTeX file for FiXme
 %
-% Copyright (C) 1998, 1999, 2000, 2001, 2002, 2004, 2005, 2006 Didier Verna.
-% Copyright (C) 2007, 2009 Didier Verna.
+% Copyright (C) 1998-2002, 2004-2007, 2009, 2013 Didier Verna
 %
 % Author: Didier Verna <didier@didierverna.net>
 % Created: Thu Dec 10 16:04:01 1998
@@ -127,7 +126,7 @@
 %
 % \newcommand\fx{\fixmelogo\xspace}
 % \newcommand\packagecopyright{%
-%   Copyright \copyright{} 1998--2002, 2004--2007, 2009 Didier Verna}
+%   Copyright \copyright{} 1998--2002, 2004--2007, 2009, 2013 Didier Verna}
 %
 % \pagestyle{mystyle}
 % \newcommand\fxmarkright{%
