--- a/fixme.dtx
+++ b/fixme.dtx
@@ -1564,7 +1564,7 @@
 %    \begin{macrocode}
 %<fixme>\NeedsTeXFormat{LaTeX2e}
 %<*header>
-\ProvidesPackage{fixme}[2009/09/30 v4.1 Insert fixme notes in your documents]
+\ProvidesPackage{fixme}[2013/01/28 v4.2 Collaborative annotations for LaTeX2e]
 
 %</header>
 %    \end{macrocode}
