--- a/fixme.dtx
+++ b/fixme.dtx
@@ -2,10 +2,9 @@
 %
 % fixme.dtx --- docTeX file for FiXme
 %
-% Copyright (C) 1998-2002, 2004-2007, 2009, 2013 Didier Verna
+% Copyright (C) 1998-2002, 2004-2007, 2009, 2013, 2017 Didier Verna
 %
 % Author: Didier Verna <didier@didierverna.net>
-% Created: Thu Dec 10 16:04:01 1998
 %
 % This file is part of FiXme.
 %
@@ -21,8 +20,6 @@
 %
 %
 % Commentary:
-%
-% Contents management by FCM version 0.1.
 %
 %
 % Code:
