--- a/fixme.dtx
+++ b/fixme.dtx
@@ -123,7 +123,7 @@
 %
 % \newcommand\fx{\fixmelogo\xspace}
 % \newcommand\packagecopyright{%
-%   Copyright \copyright{} 1998--2002, 2004--2007, 2009, 2013 Didier Verna}
+%   Copyright \copyright{} 1998--2002, 2004--2007, 2009, 2013, 2017 Didier Verna}
 %
 % \pagestyle{mystyle}
 % \newcommand\fxmarkright{%
