Advertise recent fix in the Changes section.

--- a/fixme.dtx
+++ b/fixme.dtx
@@ -1482,6 +1482,8 @@
 %
 % \section{History\label{sec:manual:history}}
 % \begin{itemize}
+% \item[v4.x.x] Fix several parsing problems when passing optional arguments
+%   containing brackets, thanks to Joseph Wright and Lars Madsen.
 % \item[v4.2] Improve Danish translation, thanks to Lars Madsen.\\
 %   Fix buglet in \cs{@wrindex} redefinition, reported by Norman
 %   Gray.\\
